--- a/mi-primer-agente.ipynb
+++ b/mi-primer-agente.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,22 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'messages': [HumanMessage(content='Hola', id='3c18eb29-a936-41a2-b912-6cf741b2ad1f'),\n",
-       "  AIMessage(content='Hola! Bienvenido a OSPE, la obra social que te brinda atención médica de calidad. ¿En qué puedo ayudarte hoy? ¿Necesitas un turno médico, tienes alguna consulta o síntoma que te preocupa?', response_metadata={'token_usage': {'completion_tokens': 54, 'prompt_tokens': 118, 'total_tokens': 172, 'completion_time': 0.169587042, 'prompt_time': 0.007611643, 'queue_time': -0.0013178530000000008, 'total_time': 0.177198685}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_753a4aecf6', 'finish_reason': 'stop', 'logprobs': None}, id='run-a221f700-8ffc-441f-a33a-23e2ba32d715-0', usage_metadata={'input_tokens': 118, 'output_tokens': 54, 'total_tokens': 172}),\n",
-       "  HumanMessage(content='Necesito un turno medico', id='141afcf3-ad10-413d-a734-eb7b97952470'),\n",
-       "  AIMessage(content='¡Claro! Para poder derivarte a un turno médico adecuado, necesito saber un poco más sobre tu situación. ¿Cuál es el motivo por el que necesitas un turno médico? ¿Tienes algún síntoma o dolor en particular? ¿Has tenido algún problema de salud reciente?\\n\\nPor favor, dime un poco más sobre lo que te pasa, para que pueda orientarte hacia la especialidad adecuada.', response_metadata={'token_usage': {'completion_tokens': 92, 'prompt_tokens': 189, 'total_tokens': 281, 'completion_time': 0.288498998, 'prompt_time': 0.014486863, 'queue_time': 0.0038440859999999983, 'total_time': 0.302985861}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_753a4aecf6', 'finish_reason': 'stop', 'logprobs': None}, id='run-e1a8849b-e5c9-4bce-867a-bfee03b8339a-0', usage_metadata={'input_tokens': 189, 'output_tokens': 92, 'total_tokens': 281}),\n",
-       "  HumanMessage(content='Tengo tos y fiebre', id='6d42b4c7-dbde-4b26-9ad5-619ba59ec710'),\n",
-       "  AIMessage(content='Lo siento. La tos y la fiebre pueden ser síntomas de varias condiciones. Para poder ayudarte mejor, te haré algunas preguntas más.\\n\\n¿Cuánto tiempo llevas con la tos y la fiebre? ¿Es una tos seca o productiva (es decir, estás escupiendo moco)? ¿Cuál es la temperatura de tu fiebre (si la has medido)? ¿Tienes algún otro síntoma adicional, como dolor de cabeza, dolor de garganta, fatiga, etc.?\\n\\nAl entender mejor tus síntomas, podré recomendarte un turno médico con la especialidad adecuada.', response_metadata={'token_usage': {'completion_tokens': 140, 'prompt_tokens': 297, 'total_tokens': 437, 'completion_time': 0.438115359, 'prompt_time': 0.015294317, 'queue_time': 0.004298212000000001, 'total_time': 0.453409676}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_753a4aecf6', 'finish_reason': 'stop', 'logprobs': None}, id='run-443d9a48-1186-4f8f-87d2-a0253919a266-0', usage_metadata={'input_tokens': 297, 'output_tokens': 140, 'total_tokens': 437}),\n",
-       "  HumanMessage(content='esoy von estos sintomas hace una semana, es tos seca y me duele la garganta. mi temperatura de fiebre es de 38 grados')]}"
+       "{'messages': [HumanMessage(content='esoy von estos sintomas hace una semana, es tos seca y me duele la garganta. mi temperatura de fiebre es de 38 grados', additional_kwargs={}, response_metadata={})]}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,23 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'messages': [HumanMessage(content='Hola', id='3c18eb29-a936-41a2-b912-6cf741b2ad1f'),\n",
-       "  AIMessage(content='Hola! Bienvenido a OSPE, la obra social que te brinda atención médica de calidad. ¿En qué puedo ayudarte hoy? ¿Necesitas un turno médico, tienes alguna consulta o síntoma que te preocupa?', response_metadata={'token_usage': {'completion_tokens': 54, 'prompt_tokens': 118, 'total_tokens': 172, 'completion_time': 0.169587042, 'prompt_time': 0.007611643, 'queue_time': -0.0013178530000000008, 'total_time': 0.177198685}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_753a4aecf6', 'finish_reason': 'stop', 'logprobs': None}, id='run-a221f700-8ffc-441f-a33a-23e2ba32d715-0', usage_metadata={'input_tokens': 118, 'output_tokens': 54, 'total_tokens': 172}),\n",
-       "  HumanMessage(content='Necesito un turno medico', id='141afcf3-ad10-413d-a734-eb7b97952470'),\n",
-       "  AIMessage(content='¡Claro! Para poder derivarte a un turno médico adecuado, necesito saber un poco más sobre tu situación. ¿Cuál es el motivo por el que necesitas un turno médico? ¿Tienes algún síntoma o dolor en particular? ¿Has tenido algún problema de salud reciente?\\n\\nPor favor, dime un poco más sobre lo que te pasa, para que pueda orientarte hacia la especialidad adecuada.', response_metadata={'token_usage': {'completion_tokens': 92, 'prompt_tokens': 189, 'total_tokens': 281, 'completion_time': 0.288498998, 'prompt_time': 0.014486863, 'queue_time': 0.0038440859999999983, 'total_time': 0.302985861}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_753a4aecf6', 'finish_reason': 'stop', 'logprobs': None}, id='run-e1a8849b-e5c9-4bce-867a-bfee03b8339a-0', usage_metadata={'input_tokens': 189, 'output_tokens': 92, 'total_tokens': 281}),\n",
-       "  HumanMessage(content='Tengo tos y fiebre', id='6d42b4c7-dbde-4b26-9ad5-619ba59ec710'),\n",
-       "  AIMessage(content='Lo siento. La tos y la fiebre pueden ser síntomas de varias condiciones. Para poder ayudarte mejor, te haré algunas preguntas más.\\n\\n¿Cuánto tiempo llevas con la tos y la fiebre? ¿Es una tos seca o productiva (es decir, estás escupiendo moco)? ¿Cuál es la temperatura de tu fiebre (si la has medido)? ¿Tienes algún otro síntoma adicional, como dolor de cabeza, dolor de garganta, fatiga, etc.?\\n\\nAl entender mejor tus síntomas, podré recomendarte un turno médico con la especialidad adecuada.', response_metadata={'token_usage': {'completion_tokens': 140, 'prompt_tokens': 297, 'total_tokens': 437, 'completion_time': 0.438115359, 'prompt_time': 0.015294317, 'queue_time': 0.004298212000000001, 'total_time': 0.453409676}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_753a4aecf6', 'finish_reason': 'stop', 'logprobs': None}, id='run-443d9a48-1186-4f8f-87d2-a0253919a266-0', usage_metadata={'input_tokens': 297, 'output_tokens': 140, 'total_tokens': 437}),\n",
-       "  HumanMessage(content='esoy von estos sintomas hace una semana, es tos seca y me duele la garganta. mi temperatura de fiebre es de 38 grados', id='7892d0ca-ad48-466d-a899-be54c59ca5f1'),\n",
-       "  AIMessage(content='Gracias por la información. Con una tos seca, dolor de garganta y fiebre de 38 grados, es probable que necesites una evaluación médica para determinar la causa subyacente.\\n\\nBasándome en tus síntomas, te recomiendo un turno médico con un médico especialista en Otorrinolaringología (ORL) o un Médico de Familia. Ellos podrán evaluar tus síntomas, realizar un examen físico y, si es necesario, ordenar pruebas adicionales para determinar la causa de tu condición.\\n\\nTe voy a derivar a un turno médico con un especialista en ORL. ¿Te gustaría que te programe un turno para hoy o mañana? ¿O prefieres elegir una fecha y hora específicas?\\n\\nAdemás, te recomiendo que tomes algunas medidas para aliviar tus síntomas mientras esperas tu turno médico. Puedes tratar de:\\n\\n* Beber mucha agua para mantener tu garganta hidratada\\n* Usar un humidificador para agregar humedad al aire\\n* Evitar hablar en voz alta o gritar para no irritar más tu garganta\\n* Tomar medicamentos para reducir la fiebre, como acetaminofeno o ibuprofeno, si lo necesitas\\n\\n¿Necesitas algo más?', response_metadata={'token_usage': {'completion_tokens': 290, 'prompt_tokens': 480, 'total_tokens': 770, 'completion_time': 0.930793853, 'prompt_time': 0.031814228, 'queue_time': 0.009664179000000002, 'total_time': 0.962608081}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_87cbfbbc4d', 'finish_reason': 'stop', 'logprobs': None}, id='run-1ce2a5ee-611c-47ca-9dae-b5db6263b438-0', usage_metadata={'input_tokens': 480, 'output_tokens': 290, 'total_tokens': 770})]}"
+       "{'messages': [HumanMessage(content='esoy von estos sintomas hace una semana, es tos seca y me duele la garganta. mi temperatura de fiebre es de 38 grados', additional_kwargs={}, response_metadata={}, id='e22c7de0-2917-414a-a1a8-5f6e35ac9fb9'),\n",
+       "  AIMessage(content='Lo siento mucho. Con los síntomas que me has descrito, es posible que estés experimentando una infección respiratoria. La tos seca y el dolor de garganta pueden ser indicativos de una faringitis o laringitis, y la fiebre de 38 grados sugiere que tu cuerpo está luchando contra una infección.\\n\\nTe recomiendo que solicites un turno con nuestro médico especialista en Otorrinolaringología (especialista en oído, nariz y garganta) para que te evalúe y te brinde un diagnóstico preciso.\\n\\n¿Quieres que te reserve un turno para hoy o mañana? ¿O prefieres que te brinde algunas recomendaciones para aliviar tus síntomas mientras esperas tu turno?\\n\\nAdemás, te recomiendo que te hidrates mucho bebiendo líquidos calientes como té o agua con miel, y que evites hablar en voz alta o gritar para no irritar más tu garganta.', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 218, 'prompt_tokens': 152, 'total_tokens': 370, 'completion_time': 0.684046777, 'prompt_time': 0.008012675, 'queue_time': 0.006438084, 'total_time': 0.692059452}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_c1a4bcec29', 'finish_reason': 'stop', 'logprobs': None}, id='run-215117e3-561f-4173-b0ba-7483c83dd918-0', usage_metadata={'input_tokens': 152, 'output_tokens': 218, 'total_tokens': 370})]}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
