--- a/test-RAG.ipynb
+++ b/test-RAG.ipynb
@@ -122,19 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[Document(metadata={'page': 0, 'source': './docs\\\\OSPE_Documentacion.pdf'}, page_content='OSPE se compromete a ofrecer un servicio de atención al cliente excepcional, asegurando que\\ntodos nuestros afiliados reciban el soporte y la información necesarios de manera eficiente y\\nprofesional.'),\n",
+       " Document(metadata={'page': 0, 'source': './docs\\\\OSPE_Documentacion.pdf'}, page_content='OSPE se compromete a ofrecer un servicio de atención al cliente excepcional, asegurando que\\ntodos nuestros afiliados reciban el soporte y la información necesarios de manera eficiente y\\nprofesional.'),\n",
        " Document(metadata={'page': 2, 'source': './docs\\\\OSPE_Documentacion.pdf'}, page_content='OSPE fue fundada como una pequeña aseguradora de salud local y ha crecido hasta convertirse\\nen una empresa con cobertura nacional. A lo largo de los años, hemos expandido nuestra red de'),\n",
-       " Document(metadata={'page': 4, 'source': './docs\\\\OSPE_Documentacion.pdf'}, page_content='OSPE - Documentación Informativa\\nPolítica de Privacidad y Seguridad de Datos\\n1. Introducción\\nEn OSPE, la privacidad y seguridad de los datos de nuestros afiliados son de suma importancia.'),\n",
-       " Document(metadata={'page': 2, 'source': './docs\\\\OSPE_Documentacion.pdf'}, page_content='OSPE - Documentación Informativa\\nInformación General sobre OSPE\\n1. Historia de OSPE\\nOSPE fue fundada como una pequeña aseguradora de salud local y ha crecido hasta convertirse')]"
+       " Document(metadata={'page': 2, 'source': './docs\\\\OSPE_Documentacion.pdf'}, page_content='OSPE fue fundada como una pequeña aseguradora de salud local y ha crecido hasta convertirse\\nen una empresa con cobertura nacional. A lo largo de los años, hemos expandido nuestra red de')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
